2001-05-24  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_suse70_interface_activate): Fixed
	bug that prevented ifaces from activation/deactivation in suse70.
	(xst_network_interface_set): Force activation setup of interfaces.
	Implemented force macanism in other activation functions.

	* parse.pl.in (xst_parse_replace_files): return () if $values
	is undef.
	(xst_parse_from_table): Don't unshift files if none were passed.

	* replace.pl.in (xst_replace_from_table): same.

	* report.pl.in (xst_report_enter): Ugly hack to avoid po warnings.

2001-05-23  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: XML tags: browseable -> browse, writable -> write.

2001-05-24  Chema Celorio  <chema@celorio.com>

	* network.pl.in (xst_network_get_interface_replace_table): added
	RH 7.1 based on RH 7.0

	* network-conf.in: added RH 7.1

2001-05-23  Chema Celorio  <chema@celorio.com>

	* users-conf.in: added RH 7.1

2001-05-23  Arturo Espinosa <arturo@ximian.com>

	* network.pl.in (xst_network_debian_woody_set_auto): Fixed
	invariant bug in while loop (bug 2714 fixed).

2001-05-23  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_set_global): Quote globals with spaces
	if neccecary.
	(xst_boot_conf_replace_image): Reverted from 1.23 changes,
	fixes bugs 2986 and 2989.

2001-05-22  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (xml_parse_conf): It's path, not point.

2001-05-20  Theo van Klaveren <t.vanklaveren@student.utwente.nl>

	* filesys.pl.in (xst_filesys_mount_cmd_parse): New function,
	parses output from 'mount -p' on FreeBSD.

	* platform.pl.in (check_freebsd): New function, double-checks
	FreeBSD version by querying the sysctl kern.version.
	(xst_platform_guess): Also check for FreeBSD.

	* shares-conf.in: Add FreeBSD to supported platforms.

	* users-conf.in: Add FreeBSD to supported platforms. Add paths
	for shadow_names, login_defs_names and skel_dir on FreeBSD.