@@ -1,5 +1,8 @@
 2001-05-24  Arturo Espinosa Aldama  <arturo@ximian.com>
 
+	* share.pl.in (xst_share_parse_nfs_exports): If the pattern
+	for a client_info is empty, assume 0.0.0.0/0.
+
 	* network.pl.in (xst_network_suse70_interface_activate): Fixed
 	bug that prevented ifaces from activation/deactivation in suse70.
 	(xst_network_interface_set): Force activation setup of interfaces.
